--- a/network_vars.yml
+++ b/network_vars.yml
@@ -14,7 +14,7 @@ SSID:
     auth_mode: psk
     encryption_mode: wpa
     psk: Ansible123456!
-  - name: MyCompany_customers
+  - name: MyCompany_clustomers
     number: 4
     enabled: yes
     auth_mode: psk
